# xllm

./: .env.example  .gitignore  README.md  a2a_server.py  langfuse_export_traces.py  langfuse_tracing.py  main.py  pyproject.toml  requirements.txt  test_agents_a2a.py  test_agents_adk.py
adk-web/agent_as_tool/: agent.py
adk-web/agent_as_tool/.adk/: session.db
adk-web/subagent/: agent.py
agent_cards/: calculator_agent_card.json  router_agent_card.json  weather_agent_card.json
agents/: __init__.py  advanced_calculator_agent.py  agent.py  calculator_agent.py  router_agent.py  router_agent_tool.py  weather_agent.py
agents/.adk/: session.db
clear/: clear_config.yaml
clear/results/: .gitkeep
clear/traces/: .gitkeep
langfuse_traces/: 1768470993360-lf-traces-export-cmkcj5sp0025ead0600db51wx.csv  1768470993360-lf-traces-export-cmkcj5sp0025ead0600db51wx_README.md  fetch_trace_details.py
langfuse_traces/01_no_delegation_greeting/: README.md  traces.csv
langfuse_traces/02_delegation_weather/: README.md  traces.csv  traces.json
langfuse_traces/03_adkweb_subagent/: README.md  trace_details.json
langfuse_traces/04_adkweb_agent_as_tool/: README.md  trace_details.json
langfuse_traces/all/: 1768474248713-lf-traces-export-cmkcj5sp0025ead0600db51wx.json  README.md  traces.json
traces/: .gitkeep
